tests/testdata/errors/undefined_function.pine
//@version=5
indicator("errors/undefined_function")
// Test calling undefined function - should fail

var x = undefinedFunction(10)

// Expected error:
// error [unknown-function] 5:26: unknown function `undefinedFunction`
